# munkres

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/munkres/: __init__.py  lib.py
tests/: test_munkres.py
